// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput compare snapshot empty state 1`] = `
<View
  style={
    [
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="text-input-view"
>
  <View
    style={
      [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        [
          undefined,
          undefined,
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      row={true}
      spread={true}
      style={
        [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {},
          {},
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          undefined,
        ]
      }
    >
      <Text
        color="#464A51"
        fsTagName="unmask"
        style={
          [
            {
              "backgroundColor": "transparent",
              "color": "#20303C",
              "writingDirection": "ltr",
            },
            undefined,
            {
              "color": "#464A51",
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            [
              {
                "minHeight": 20,
              },
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 14,
                },
                undefined,
              ],
              undefined,
            ],
          ]
        }
        testID="text-input.label"
      >
        label
      </Text>
    </View>
    <View
      centerV={true}
      row={true}
      style={
        [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {},
          {},
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
          [
            undefined,
            [
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "height": 48,
                  "paddingHorizontal": 16,
                },
                {
                  "borderColor": "#464A51",
                  "height": 48,
                  "width": 702,
                },
              ],
              undefined,
            ],
          ],
        ]
      }
    >
      <View
        flexG={true}
        style={
          [
            undefined,
            undefined,
            undefined,
            {
              "flexGrow": 1,
            },
            undefined,
            {},
            {},
            {},
            undefined,
          ]
        }
      >
        <TextInput
          accessibilityState={
            {
              "disabled": false,
            }
          }
          autoCorrect={false}
          autoFocus={false}
          cursorColor="#2E61DE"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="placeholder"
          placeholderTextColor="#464A51"
          style={
            [
              {
                "flexGrow": 1,
                "paddingBottom": 0,
                "paddingTop": 0,
                "textAlign": "left",
              },
              {
                "color": "#000000",
              },
              [
                {},
                undefined,
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 14,
                },
                undefined,
              ],
              false,
            ]
          }
          testID="text-input"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
    <View
      row={true}
      spread={true}
      style={
        [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {},
          {},
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            undefined,
            undefined,
            undefined,
            {
              "flex": 1,
            },
            undefined,
            {},
            {},
            {},
            undefined,
          ]
        }
      />
      <View
        style={
          [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`TextInput compare snapshot focused typing 1`] = `
<View
  style={
    [
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="text-input-view"
>
  <View
    style={
      [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        [
          {},
          undefined,
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      row={true}
      spread={true}
      style={
        [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {},
          {},
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          undefined,
        ]
      }
    >
      <Text
        color="#464A51"
        fsTagName="unmask"
        style={
          [
            {
              "backgroundColor": "transparent",
              "color": "#20303C",
              "writingDirection": "ltr",
            },
            undefined,
            {
              "color": "#464A51",
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            [
              {
                "minHeight": 20,
              },
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 14,
                },
                undefined,
              ],
              undefined,
            ],
          ]
        }
        testID="text-input.label"
      >
        label
      </Text>
    </View>
    <View
      centerV={true}
      row={true}
      style={
        [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {},
          {},
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
          [
            {},
            [
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "height": 48,
                  "paddingHorizontal": 16,
                },
                {
                  "borderColor": "#464A51",
                  "height": 48,
                  "width": 702,
                },
              ],
              undefined,
            ],
          ],
        ]
      }
    >
      <View
        flexG={true}
        style={
          [
            undefined,
            undefined,
            undefined,
            {
              "flexGrow": 1,
            },
            undefined,
            {},
            {},
            {},
            undefined,
          ]
        }
      >
        <TextInput
          accessibilityState={
            {
              "disabled": false,
            }
          }
          autoCorrect={false}
          autoFocus={true}
          cursorColor="#2E61DE"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="placeholder"
          placeholderTextColor="#464A51"
          style={
            [
              {
                "flexGrow": 1,
                "paddingBottom": 0,
                "paddingTop": 0,
                "textAlign": "left",
              },
              {
                "color": "#000000",
              },
              [
                {},
                undefined,
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 14,
                },
                undefined,
              ],
              false,
            ]
          }
          testID="text-input"
          underlineColorAndroid="transparent"
          value="val"
        />
      </View>
    </View>
    <View
      row={true}
      spread={true}
      style={
        [
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {},
          {},
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            undefined,
            undefined,
            undefined,
            {
              "flex": 1,
            },
            undefined,
            {},
            {},
            {},
            undefined,
          ]
        }
      />
      <View
        style={
          [
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;
